--- a/Karyawan/login_karyawan.html
+++ b/Karyawan/login_karyawan.html
@@ -18,10 +18,10 @@
         </div>
         <div class="login">
             <form action="login.php" method="post">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required><br><br>
+                <label for="username">Username:</label><br>
+                <input type="text" id="username" name="username" required><br>
                 
-                <label for="password">Password:</label>
+                <label for="password">Password:</label><br>
                 <input type="password" id="password" name="password" required><br><br>
                 
                 <input type="submit" value="Login">
