--- a/Pemilik/dashboard_Pemilik.html
+++ b/Pemilik/dashboard_Pemilik.html
@@ -38,7 +38,7 @@
             </ul>
             <ul class="logout-mode">
                 <li><a href="#">
-                    <a href="login.html">
+                    <a href="login_pemilik.php">
                         <i class="fa-solid fa-right-from-bracket"></i>
                         <span class="link-name">Logout</span>
                     </a>
