--- a/Pemilik/index.html
+++ b/Pemilik/index.html
@@ -17,11 +17,11 @@
         </div>
         <div class="Pilihan">
             <form action="">
-                <a href="login.html">
+                <a href="login_pemilik.php">
                     <input type="button" value="PEMILIK UMKM">
                 </a>
                 <br>
-                <a href="../Karyawan/login_karyawan.html">
+                <a href="../Karyawan/login_karyawan.php">
                     <input type="button" value="KARYAWAN UMKM">
                 </a>
                 
