--- a/Pemilik/index.html
+++ b/Pemilik/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="Pilihan">
             <form action="">
-                <a href="login_pemilik.php">
+                <a href="login_pemilik.html">
                     <input type="button" value="PEMILIK UMKM">
                 </a>
                 <br>
